[gd_scene load_steps=2 format=3 uid="uid://bwm7jp3l20sxf"]

[ext_resource type="Script" path="res://scripts/EventQualityAnalysisRunner.gd" id="1_quality_runner"]

[node name="EventQualityAnalysisScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_quality_runner")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "üîç ANALISI QUALIT√Ä EVENTI - SafePlace v1.4.3"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Avvio analisi eventi source..."
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ResultsLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
text = "Inizializzazione analisi..." 